# examen-2

./: README.md
ejercicio-2/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  coverage.info  expresionesAritmeticas  runUnitTests
ejercicio-2/Testing/Temporary/: CTestCostData.txt
ejercicio-2/coverage-report/: index-sort-f.html  index-sort-l.html  index.html
ejercicio-2/coverage-report/11/: index-sort-f.html  index-sort-l.html  index.html  initializer_list.func-sort-c.html  initializer_list.func.html  initializer_list.gcov.html  new.func-sort-c.html  new.func.html  new.gcov.html  tuple.func-sort-c.html  tuple.func.html  tuple.gcov.html  utility.func-sort-c.html  utility.func.html  utility.gcov.html
ejercicio-2/coverage-report/11/bits/: alloc_traits.h.func-sort-c.html  alloc_traits.h.func.html  alloc_traits.h.gcov.html  allocator.h.func-sort-c.html  allocator.h.func.html  allocator.h.gcov.html  basic_string.h.func-sort-c.html  basic_string.h.func.html  basic_string.h.gcov.html  basic_string.tcc.func-sort-c.html  basic_string.tcc.func.html  basic_string.tcc.gcov.html  char_traits.h.func-sort-c.html  char_traits.h.func.html  char_traits.h.gcov.html  cpp_type_traits.h.func-sort-c.html  cpp_type_traits.h.func.html  cpp_type_traits.h.gcov.html  deque.tcc.func-sort-c.html  deque.tcc.func.html  deque.tcc.gcov.html  index-sort-f.html  index-sort-l.html  index.html  ios_base.h.func-sort-c.html  ios_base.h.func.html  (+43 more)
ejercicio-2/headers/: expresionesAritmeticas.hpp
ejercicio-2/src/: expresionesAritmeticas.cpp  main.cpp  test.cpp
(+72 files in other folders)
