cmake_minimum_required(VERSION 3.5)
project(expresionesAritmeticas)
set(CMAKE_CXX_STANDARD 11)
set(SOURCES src/expresionesAritmeticas.cpp src/main.cpp)
set(HEADERS "headers/expresionesAritmeticas.hpp")
add_executable(expresionesAritmeticas ${SOURCES})

IF( test AND test STREQUAL "on" )
  set(CMAKE_CXX_FLAGS "--coverage -fprofile-arcs -ftest-coverage")
  message("Testing enabled")
  file(GLOB TEST_SRC_FILES src/expresionesAritmeticas.cpp src/test.cpp)
  add_subdirectory("ext/googletest")
  enable_testing()
  include_directories(${gtest_SOURCE_DIR}/include ${gtest_SOURCE_DIR})
  add_executable(runUnitTests ${TEST_SRC_FILES})
  target_link_libraries(runUnitTests gtest gtest_main)
  add_test(UnitTests runUnitTests)
ENDIF()